--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-adiwidianto
-humairarizkia
+<!DOCTYPE HTML>
+<html>
+ <title>WEB SAYA
+  </title>
+<head>
+  SELAMAT DATANG DI WEB ADI
+  </head>
+  <body>
+    <\body>
