--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <title>WEB SAYA
   </title>
 <head>
-  SELAMAT DATANG DI WEB ADI
+ <h1><b>SELAMAT DATANG DI WEB ADI </b> </h1>
   </head>
   <body>
    Tuhan adalah penyebab utama (choice prima), yang menciptakan alam beserta isinya, yang maha Esa dan menentukan perjalanan alam serta awal dari segalanya. Hakikat Tuhan di dalam banyak terdapat di dalam al-Qur’an. Sejarah pemikiran tentang Tuhan menurut pandangan teori evalusionisme adalah animisme, dinamisme, politheisme, henotheisme dan monotheisme. Menurut pandangan pemikiran umat Islam adalah, Mu’tazilah, Jabariah, Qadariyah dan Ahlul al-Sunnah Wa al-Jama'ah.
