--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
- <title>WEB SAYA
-  </title>
+ <title>Top Secret Web</title>
 <head>
- <h1><b>SELAMAT DATANG DI WEB ADI </b> </h1>
+ <h1><b>Welcome to my web </b> </h1>
   </head>
   <body>
-   Tuhan adalah penyebab utama (choice prima), yang menciptakan alam beserta isinya, yang maha Esa dan menentukan perjalanan alam serta awal dari segalanya. Hakikat Tuhan di dalam banyak terdapat di dalam al-Qur’an. Sejarah pemikiran tentang Tuhan menurut pandangan teori evalusionisme adalah animisme, dinamisme, politheisme, henotheisme dan monotheisme. Menurut pandangan pemikiran umat Islam adalah, Mu’tazilah, Jabariah, Qadariyah dan Ahlul al-Sunnah Wa al-Jama'ah.
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/ICQkaejJ9Mc" frameborder="0" allowfullscreen></iframe><br>
+   <p> My github account is 09021281621045-unsri</p>
     </body>
 </html>
